--- a/_research-articles/2020-01-01-articles.md
+++ b/_research-articles/2020-01-01-articles.md
@@ -1,5 +1,5 @@
 ---
-layout: research-article
+layout: post
 title:  "Why do parties cooperate in presidentialism? Electoral and government coalition formation in Latin America"
 author: "Kenneth Bunker"
 ---
